--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
-<html ng-app> 
+<html> 
   <head>
      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
+  <script src="components/todo.js"></script>
   </head>
   
   <body>
-    <div>
-       <input type="text" ng-model="yourName" placeholder="Enter a name here">
-       <h1>Hello {{yourName}}!</h1>
+    <div ng-app="todoApp" ng-controller="todoController">
+       <input ng-model="item"><button ng-click="add()">Add</button>
+       <ul>
+         <li ng-repeat="t in tasks">{{ t }}</li>
+       </ul>
     </div>
   </body>
 </html>
