(fix) Use Angular CDN instead of node module

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
   <head>
-    <script src="angular/angular.js"></script>
-    <script src="angular-route/angular-route.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular-route.min.js"></script>
     <script src="todo.js"></script>
     <link rel="stylesheet" href="todo.css">
   </head>
